...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/treatmentHintLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:text="@{treatmentVm.interceptGroup ? @string/treatment_hint_intercept : @string/treatment_hint}"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progress="@{timeUtils.percentage(treatmentVm.todayUsage, vm.subjectSettings.treatmentLimit)}"
                    app:indicatorColor="@color/orange"
                    app:indicatorSize="240dp"
                    app:layout_constraintBottom_toBottomOf="parent"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/todayUsageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/work_sans_light"
                        android:text="@{timeUtils.digitalTimeHm(treatmentVm.todayUsage)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="64sp" />

                    <TextView
                        android:id="@+id/maxUsageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/work_sans_light"
                        android:text="@{@string/max_usage_format(timeUtils.digitalTimeHm(vm.subjectSettings.treatmentLimit))}"
                        android:textColor="@color/light_grey"
                        android:textSize="20sp" />
...
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="@{treatmentVm.interceptGroup ? View.GONE : View.VISIBLE}">

                <TextView
                    android:id="@+id/incentiveLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/treatment_incentive_label"
                    android:textColor="@color/white_alpha"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/incentiveView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/work_sans_medium"
                    android:gravity="end|center_vertical"
                    android:text="@{@string/dollar_format(treatmentVm.dailyIncentive)}"
...
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="@{treatmentVm.interceptGroup ? View.GONE : View.VISIBLE}">

                <TextView
                    android:id="@+id/totalEarnedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/treatment_earned_label"
                    android:textColor="@color/med_green_alpha"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/totalEarnedView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/work_sans_medium"
                    android:gravity="end|center_vertical"
                    android:text="@{@string/dollar_format((double) treatmentVm.successes * treatmentVm.dailyIncentive)}"
...
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="@{treatmentVm.interceptGroup ? View.VISIBLE : View.GONE}">

                <TextView
                    android:id="@+id/successes_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@{messageUtils.successesMessage(treatmentVm.successes, @color/med_green)}"
                    android:textSize="20sp" />

...
