...

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/request_permission_title"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/request_permission_body"
                android:textSize="16sp" />

            <Button
                android:id="@+id/requestPermissionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/work_sans_medium"
                android:text="@{vm.usageAccessEnabled ? @string/request_permission_access_enabled : @string/request_permission_enable_access }"
                android:enabled="@{!vm.usageAccessEnabled}"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/work_sans_medium"
                android:text="@string/button_continue"
                android:enabled="@{vm.usageAccessEnabled}"
...
